# simple-client-server

./: CMakeLists.txt  InvoiceMasterClient.cpp  InvoiceMasterServer.cpp  README.md  client.cpp  notes  server.cpp
InvoiceMasterClient/: Application.cpp  Application.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  ServiceConnector.cpp  ServiceConnector.hpp  View.cpp  View.hpp
InvoiceMasterClient/ServiceConnector/: Request.cpp  Request.hpp  Response.cpp  Response.hpp  ServiceConnector.cpp  ServiceConnector.hpp
InvoiceMasterClient/localFiles/: invoice.xml
InvoiceMasterClient/views/: AdminAccess.cpp  AdminAccess.hpp  Documents.cpp  Documents.hpp  InvoiceDelete.cpp  InvoiceDelete.hpp  InvoiceGet.cpp  InvoiceGet.hpp  InvoiceMenu.cpp  InvoiceMenu.hpp  InvoiceNew.cpp  InvoiceNew.hpp  Licence.cpp  Licence.hpp  LicenceVerify.cpp  LicenceVerify.hpp  Login.cpp  Login.hpp  Logout.cpp  Logout.hpp  MainMenu.cpp  MainMenu.hpp  Quit.cpp  Quit.hpp  SignUp.cpp  SignUp.hpp
InvoiceMasterServer/: Application.cpp  Application.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp
InvoiceMasterServer/Service/: Listener.cpp  Listener.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
InvoiceMasterServer/controller/: Controller.cpp  Controller.hpp
InvoiceMasterServer/entities/: Invoice.cpp  Invoice.hpp
InvoiceMasterServer/import/Invoice/: InvoiceSAX2Handler.cpp  InvoiceSAX2Handler.hpp  XMLImport.cpp  XMLImport.hpp
InvoiceMasterServer/localFiles/: admin1
InvoiceMasterServer/model/: Authorisation.cpp  Authorisation.hpp
InvoiceMasterServer/models/: AuthenticationManager.cpp  AuthenticationManager.hpp  DocumentsManager.cpp  DocumentsManager.hpp  InvoiceManager.cpp  InvoiceManager.hpp  LicenceManager.cpp  LicenceManager.hpp  UserManager.cpp  UserManager.hpp
config/include/config/: settings.hpp
settings/: ServiceList.hpp
sockets/: TcpClientSocket.hpp  TcpServerSocket.hpp  TcpSocket.hpp
utils/: CMakeLists.txt
utils/helpers/: FileHelper.cpp  StringHelper.cpp
utils/helpers/include/: FileHelper.hpp  StringHelper.hpp
utils/licence/: Files.cpp  Service.cpp
utils/licence/include/licence/: Files.hpp  Service.hpp
utils/mocked/csv/: Reader.cpp  Writer.cpp
utils/mocked/csv/include/csv/: Reader.hpp  Writer.hpp
utils/mocked/database/: DB.cpp  Entity.cpp  Tables.cpp
utils/mocked/database/dump/: users
utils/mocked/database/include/database/: ActiveRecord.hpp  DB.hpp  Entity.hpp  Tables.hpp
utils/mocked/database/include/database/schema/: Document.hpp  Invoice.hpp  InvoiceItem.hpp  Licence.hpp  OverdueInvoice.hpp  Users.hpp
utils/mocked/database/schema/: Document.cpp  Invoice.cpp  InvoiceItem.cpp  Licence.cpp  OverdueInvoice.cpp  Users.cpp
utils/mocked/email/: Inbox.cpp
utils/mocked/email/include/email/: Inbox.hpp
utils/mocked/email/mailbox/: user
utils/protocol/: Agreements.cpp  ApiAccess.cpp  Request.cpp  Response.cpp
utils/protocol/include/protocol/: Agreements.hpp  ApiAccess.hpp  Request.hpp  Response.hpp
utils/security/: AESGCMEncrypt.cpp  Argon2Wrapper.cpp  Sha2Wrapper.cpp
utils/security/include/security/: AESGCMEncrypt.hpp  Argon2Wrapper.hpp  Sha2Wrapper.hpp  config.hpp
utils/transport/: SSLClient.cpp  SSLServer.cpp  TcpClientSocket.cpp  TcpClientSocket.hpp  TcpServerSocket.cpp  TcpServerSocket.hpp  TcpSocket.cpp  TcpSocket.hpp
utils/transport/include/transport/: SSLClient.hpp  SSLServer.hpp  TcpClientSocket.hpp  TcpServerSocket.hpp  TcpSocket.hpp
utils/userInputOutput/: Input.cpp  Output.cpp
utils/userInputOutput/include/userInputOutput/: Input.hpp  Output.hpp
